--- a/week17.html
+++ b/week17.html
@@ -21,11 +21,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (10)</b></font></td></tr>
-<tr><td>Wilson (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Wilson (D)</td>    <td></td><td align=right>130</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>50</td></tr>
 <tr><td>McGuire</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Fitzgerald</td>    <td></td><td align=right>75</td></tr>
-<tr><td>Lockett (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Lockett (D)</td>   <td></td><td align=right>60</td></tr>
 <tr><td>Kelce (D)</td>     <td></td><td align=right>***</td></tr>
 <tr><td>Prater</td>        <td></td><td align=right>115</td></tr>
 <tr><td>Darnold</td>       <td></td><td align=right>0</td></tr>
@@ -53,12 +53,12 @@
 <tr><td>Mahomes</td>       <td></td><td align=right>245</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
 <tr><td>JWhite</td>        <td></td><td align=right>75</td></tr>
-<tr><td>Cooper (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Cooper (D)</td>    <td></td><td align=right>50</td></tr>
 <tr><td>Edelman</td>       <td></td><td align=right>80</td></tr>
 <tr><td>McDonald</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Lutz</td>          <td></td><td align=right>10</td></tr>
 <tr><td>Michel</td>        <td></td><td align=right>25</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>485</td></tr>
 </table>
 </td>
 </tr>
@@ -66,8 +66,8 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (4)</b></font></td></tr>
-<tr><td>Trubisky (D)</td>  <td></td><td align=right>***</td></tr>
-<tr><td>Elliott (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Trubisky (D)</td>  <td></td><td align=right>125</td></tr>
+<tr><td>Elliott (D)</td>   <td></td><td align=right>115</td></tr>
 <tr><td>Lindsay</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Hilton</td>        <td></td><td align=right>30</td></tr>
 <tr><td>Cooks (D)</td>     <td></td><td align=right>***</td></tr>
@@ -80,7 +80,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (5)</b></font></td></tr>
-<tr><td>Rivers (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Rivers (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Drake</td>         <td></td><td align=right>25</td></tr>
 <tr><td>Barber</td>        <td></td><td align=right>30</td></tr>
 <tr><td>JJones</td>        <td></td><td align=right>140</td></tr>
@@ -127,7 +127,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
 <tr><td>Luck</td>          <td></td><td align=right>170</td></tr>
 <tr><td>Ingram (D)</td>    <td></td><td align=right>***</td></tr>
-<tr><td>Miller (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Miller (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Woods</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Hill (D)</td>      <td></td><td align=right>***</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
@@ -177,7 +177,7 @@
 <tr><td><font size=2>Roger(3)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>12125</font></td>
+    <td><font size=2>12175</font></td>
     <td><font size=2>10110</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>460</font></td>
@@ -217,7 +217,7 @@
 <tr><td><font size=2>Sam(10)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>11720</font></td>
+    <td><font size=2>11910</font></td>
     <td><font size=2>9995</font></td>
     <td><font size=2>985</font></td>
     <td><font size=2>445</font></td>
@@ -233,7 +233,7 @@
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>11070</font></td>
+    <td><font size=2>11310</font></td>
     <td><font size=2>9795</font></td>
     <td><font size=2>1270</font></td>
     <td><font size=2>340</font></td>
