--- a/week17.html
+++ b/week17.html
@@ -8,14 +8,14 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (1)</b></font></td></tr>
 <tr><td>Ryan</td>          <td></td><td align=right>215</td></tr>
-<tr><td>Gurley (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Gurley (D)</td>    <td></td><td align=right>205</td></tr>
 <tr><td>Conner</td>        <td></td><td align=right>30</td></tr>
 <tr><td>Smith-Schuster</td><td></td><td align=right>75</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>50</td></tr>
-<tr><td>Gronkowski (D)</td><td></td><td align=right>***</td></tr>
-<tr><td>Butker (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Gronkowski (D)</td><td></td><td align=right>0</td></tr>
+<tr><td>Butker (D)</td>    <td></td><td align=right>50</td></tr>
 <tr><td>Carlson</td>       <td></td><td align=right>60</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>685</td></tr>
 </table>
 </td>
 <td>
@@ -26,10 +26,10 @@
 <tr><td>McGuire</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Fitzgerald</td>    <td></td><td align=right>75</td></tr>
 <tr><td>Lockett (D)</td>   <td></td><td align=right>60</td></tr>
-<tr><td>Kelce (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Kelce (D)</td>     <td></td><td align=right>50</td></tr>
 <tr><td>Prater</td>        <td></td><td align=right>115</td></tr>
 <tr><td>Darnold</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>480</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -70,11 +70,11 @@
 <tr><td>Elliott (D)</td>   <td></td><td align=right>115</td></tr>
 <tr><td>Lindsay</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Hilton</td>        <td></td><td align=right>30</td></tr>
-<tr><td>Cooks (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Cooks (D)</td>     <td></td><td align=right>30</td></tr>
 <tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>135</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>425</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>860</td></tr>
 </table>
 </td>
 <td>
@@ -84,11 +84,11 @@
 <tr><td>Drake</td>         <td></td><td align=right>25</td></tr>
 <tr><td>Barber</td>        <td></td><td align=right>30</td></tr>
 <tr><td>JJones</td>        <td></td><td align=right>140</td></tr>
-<tr><td>MThomas (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>MThomas (D)</td>   <td></td><td align=right>135</td></tr>
 <tr><td>Ebron</td>         <td></td><td align=right>105</td></tr>
 <tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>100</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>535</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -97,13 +97,13 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (6)</b></font></td></tr>
 <tr><td>Watson</td>        <td></td><td align=right>110</td></tr>
 <tr><td>MGordon</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kamara (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Kamara (D)</td>    <td></td><td align=right>35</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>30</td></tr>
 <tr><td>CDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Everett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>50</td></tr>
 <tr><td>LJackson</td>      <td></td><td align=right>295</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>520</td></tr>
 </table>
 </td>
 <td>
@@ -126,14 +126,14 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
 <tr><td>Luck</td>          <td></td><td align=right>170</td></tr>
-<tr><td>Ingram (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Ingram (D)</td>    <td></td><td align=right>25</td></tr>
 <tr><td>Miller (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Woods</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hill (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Hill (D)</td>      <td></td><td align=right>185</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Zuerlein (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>Zuerlein (D)</td>  <td></td><td align=right>100</td></tr>
 <tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>480</td></tr>
 </table>
 </td>
 <td>
@@ -169,7 +169,7 @@
 <tr><td><font size=2>States(1)</font></td>
     <td><font size=2>13</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>12515</font></td>
+    <td><font size=2>12770</font></td>
     <td><font size=2>8415</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>460</font></td>
@@ -185,7 +185,7 @@
 <tr><td><font size=2>Steven(5)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>10985</font></td>
+    <td><font size=2>11120</font></td>
     <td><font size=2>10210</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>310</font></td>
@@ -217,7 +217,7 @@
 <tr><td><font size=2>Sam(10)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>11910</font></td>
+    <td><font size=2>11960</font></td>
     <td><font size=2>9995</font></td>
     <td><font size=2>985</font></td>
     <td><font size=2>445</font></td>
@@ -225,7 +225,7 @@
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>11250</font></td>
+    <td><font size=2>11560</font></td>
     <td><font size=2>10510</font></td>
     <td><font size=2>1235</font></td>
     <td><font size=2>220</font></td>
@@ -233,15 +233,15 @@
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>11310</font></td>
+    <td><font size=2>11340</font></td>
     <td><font size=2>9795</font></td>
     <td><font size=2>1270</font></td>
     <td><font size=2>340</font></td>
-    <td><font size=2>4</font></td></tr>
+    <td><font size=2>5</font></td></tr>
 <tr><td><font size=2>Grant(6)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>11310</font></td>
+    <td><font size=2>11345</font></td>
     <td><font size=2>11045</font></td>
     <td><font size=2>1345</font></td>
     <td><font size=2>420</font></td>
