--- a/week3.html
+++ b/week3.html
@@ -116,7 +116,7 @@
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Gostkowski</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Seibert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
